force-app/main/default/objects/Trade_Good__c/Trade_Good__c.object-meta.xml
<CustomObject>
    <label>Trade Good</label>
    <pluralLabel>Trade Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Trade Good Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>