force-app/main/default/objects/Trade_Good__c/fields/Good__c.field-meta.xml
<CustomField>
    <fullName>Good__c</fullName>
    <label>Good</label>
    <type>Text</type>
    <length>255</length>
</CustomField>