force-app/main/default/objects/Trade_Good__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>